# Chaosaiart-Nodes

./: Install_windows.bat  README.md  WISH_LIST.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  version.md  version.txt  version_log - Kopie.md  version_log.md
.github/workflows/: publish.yml
github/workflows/: publish.yml
nodes/: nodes.py  v01_00_00.py  v01_01_01.py  v01_02_00.py
web/: showText.js
