[project]
name = "chaosaiart-nodes"
description = "LowVRAM Animation : txt2video - img2video - video2video , Frame by Frame, compatible with LowVRAM GPUs\nIncluded : Prompt Switch, Checkpoint Switch, Cache, Number Count by Frame, Ksampler txt2img & img2img ..."
version = "1.0.0"
license = "LICENSE"
dependencies = ["opencv-python", "tqdm"]

[project.urls]
Repository = "https://github.com/chaosaiart/Chaosaiart-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "Chaosaiart-Nodes"
Icon = ""
